<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spiritfitness.spiritfitapp.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <Button
        android:id="@+id/receiving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_receiving"
        android:layout_weight="1"
        />
    <Button
        android:id="@+id/moving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_moving" />
    <Button
        android:id="@+id/inquiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_inquiry" />
    <Button
        android:id="@+id/shipping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_shipping" />
</LinearLayout>

</RelativeLayout>
