<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_gray"
    >



    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            >
            <TextView
                android:id="@+id/container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:paddingLeft="20dp"
                android:text="@string/container_txt"
                android:textColor="@color/address_devicename_txt"
                />
            <EditText
                android:id="@+id/container_no"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/container_no"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            >
            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:paddingLeft="20dp"
                android:text="@string/invoice_txt"
                android:textColor="@color/address_devicename_txt"
                />
            <EditText
                android:id="@+id/invoive_no"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/invoice_no"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            >
            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:paddingLeft="20dp"
                android:text="@string/total_received_txt"
                android:textColor="@color/address_devicename_txt"
                />
            <EditText
                android:id="@+id/received_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:inputType="number"
                android:singleLine="true"
                android:text="@string/received_info"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            >
            <TextView
                android:id="@+id/login_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:paddingLeft="20dp"
                android:text="@string/received_date_txt"
                android:textColor="@color/address_devicename_txt"
                />
            <EditText
                android:id="@+id/received_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/received_date"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            >
            <TextView
                android:id="@+id/password_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:paddingLeft="20dp"
                android:text="@string/received_worker"
                android:textColor="@color/address_devicename_txt"
                />
            <EditText
                android:id="@+id/received_worker_mail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/received_worker_mail"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            >
            <TextView
                android:id="@+id/recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:paddingLeft="20dp"
                android:text="@string/entered_cs"
                android:textColor="@color/address_devicename_txt"
                />
            <EditText
                android:id="@+id/entered_cs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/entered_cs_info"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            >
            <TextView
                android:id="@+id/entered_pt_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:paddingLeft="20dp"
                android:text="@string/entered_pt"
                android:textColor="@color/address_devicename_txt"
                />
            <EditText
                android:id="@+id/entered_pt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/entered_pt_info"

                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/info"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="20dp"
        >

        <Button
            android:id="@+id/btn_scanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/old_password"
            android:text="@string/scanner_btn"
            android:background="@color/btn_bouns_record"
            android:textColor="@color/white"

            />
    </LinearLayout>



</RelativeLayout>